--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "React server side project - SET 2021",
   "main": "./dist/app.js",
-  "license": "SET",
+  "license": "Eri",
   "scripts": {
     "build:prod": "npx webpack --env PRODUCTION",
     "start:client": "npx webpack serve --config-name client --env HOT",
@@ -13,6 +13,7 @@
     "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
