feat: integrate eslint & prettier

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "npx jest",
     "build:prod": "npx webpack --env PRODUCTION",
     "start:client": "npx webpack serve --config-name client --env HOT",
-    "start:server": "npx concurrently \"npx webpack -w\" \"npx nodemon ./dist/app.js\""
+    "start:server": "npx concurrently \"npx webpack -w\" \"npx nodemon ./dist/app.js\"",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
     "express": "^4.17.2",
@@ -36,16 +39,23 @@
     "@types/styled-components": "^5.1.20",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "concurrently": "^7.0.0",
     "copy-webpack-plugin": "^10.2.0",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.7",
     "jsdom": "^19.0.0",
     "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
     "react-refresh": "^0.11.0",
     "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
