--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     ]
   },
   "scripts": {
-    "test": "npx jest",
+    "test:dev": "npx jest --watch",
+    "test:coverage": "npx jest --coverage",
     "build:prod": "npx webpack --env PRODUCTION",
     "start:client": "npx webpack serve --config-name client --env HOT",
     "start:server": "npx concurrently \"npx webpack -w\" \"npx nodemon ./dist/app.js\"",
