--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
+    "sass": "^1.49.9",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -66,12 +67,17 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
+    "css-loader": "^6.7.1",
+    "css-modules-typescript-loader": "^4.0.1",
+    "ignore-loader": "^0.1.2",
     "jsdom": "^19.0.0",
     "lint-staged": "^12.3.5",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "react-refresh": "^0.11.0",
     "ts-jest": "^27.1.2",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
