--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,26 +30,41 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # Setup Nodejs
-      - name: Set up Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          node-version: ${{ matrix.node-version }}
-
-      # Install dependencies
-      - name: Install dependencies
-        run: npm install
-
-      # Build src
-      - name: Build src
-        run: npm run build:prod
-
-      - uses: mr-smithers-excellent/docker-build-push@v5
-        name: Build & push Docker image
-        with:
-          image: trgianghuynh1808/set2021interview
-          tags: v1, latest
-          registry: registry-url.io
-          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/set2021-interview:latest
+
+      # # Setup Nodejs
+      # - name: Set up Node.js ${{ matrix.node-version }}
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: ${{ matrix.node-version }}
+
+      # # Install dependencies
+      # - name: Install dependencies
+      #   run: npm install
+
+      # # Build src
+      # - name: Build src
+      #   run: npm run build:prod
+
+      # - uses: mr-smithers-excellent/docker-build-push@v5
+      #   name: Build & push Docker image
+      #   with:
+      #     image: trgianghuynh1808/set2021interview
+      #     tags: v1, latest
+      #     dockerfile: Dockerfile
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
