--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,10 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+#
+env:
+  IMAGE_NAME: "trgianghuynh1808/set2021-interview"
+  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -45,6 +48,26 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/set2021-interview:latest
+          
+          
+      - name: Deploy to Digital Ocean droplet via SSH action
+        uses: appleboy/ssh-action@v0.1.3
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEY }}
+          envs: IMAGE_NAME
+          script:
+            docker run -d $(echo $IMAGE_NAME)
+            # Stop running container
+            #docker stop $(echo $IMAGE_NAME)
+            # Remove old container
+            #docker rm $(echo $IMAGE_NAME)
+            # Run a new container from a new image
+            #docker run -d \
+            #--restart always \
+            #--name $(echo $IMAGE_NAME) \
+            #$(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
       # # Setup Nodejs
       # - name: Set up Node.js ${{ matrix.node-version }}
