--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEY }}
           envs: IMAGE_NAME
-          script:
+          script: | 
             docker run -d $(echo $IMAGE_NAME)
             # Stop running container
             #docker stop $(echo $IMAGE_NAME)
