--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,12 @@ on:
   workflow_dispatch:
 #
 env:
-  IMAGE_NAME: "trgianghuynh1808/set2021-interview"
-  
+  IMAGE_NAME: 'trgianghuynh1808/set2021-interview'
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build_and_push_to_docker_hub:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -48,8 +48,18 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/set2021-interview:latest
-          
-          
+
+  deploy_to_digital_ocean:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+
+    strategy:
+      matrix:
+        node-version: [14.x]
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
       - name: Deploy to Digital Ocean droplet via SSH action
         uses: appleboy/ssh-action@v0.1.3
         with:
@@ -57,37 +67,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEY }}
           envs: IMAGE_NAME
-          script: | 
-            docker run -d $(echo $IMAGE_NAME)
-            # Stop running container
-            #docker stop $(echo $IMAGE_NAME)
-            # Remove old container
-            #docker rm $(echo $IMAGE_NAME)
-            # Run a new container from a new image
-            #docker run -d \
-            #--restart always \
-            #--name $(echo $IMAGE_NAME) \
-            #$(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
-
-      # # Setup Nodejs
-      # - name: Set up Node.js ${{ matrix.node-version }}
-      #   uses: actions/setup-node@v1
-      #   with:
-      #     node-version: ${{ matrix.node-version }}
-
-      # # Install dependencies
-      # - name: Install dependencies
-      #   run: npm install
-
-      # # Build src
-      # - name: Build src
-      #   run: npm run build:prod
-
-      # - uses: mr-smithers-excellent/docker-build-push@v5
-      #   name: Build & push Docker image
-      #   with:
-      #     image: trgianghuynh1808/set2021interview
-      #     tags: v1, latest
-      #     dockerfile: Dockerfile
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
+          script: docker run -p 9000:3000 -d $(echo $IMAGE_NAME)
