--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,6 +69,5 @@ jobs:
           key: ${{ secrets.SSHKEY }}
           envs: CONTAINER_NAME, IMAGE_NAME
           script: |
-            docker stop $(echo $CONTAINER_NAME)
-            docker rm $(echo $CONTAINER_NAME)
+            [ ! "$(docker ps -a | grep $(echo $CONTAINER_NAME)" ] && docker stop $(echo $CONTAINER_NAME) && docker rm $(echo $CONTAINER_NAME)
             docker run --name $(echo $CONTAINER_NAME) -p 9000:9000 -d $(echo $IMAGE_NAME)
